# hades

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  README.pypi.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yaml  pr.yaml  publish.yaml
api_reference/event/: index.html
api_reference/hades/: index.html
api_reference/process/: index.html
api_reference/time/: index.html
api_reference/visualisation/: index.html
core/: index.html
design-justification/: index.html
docs/: core.md  design-justification.md  index.md  overview.md  time.md  tutorial.md  visualisation.md
docs/api_reference/: event.md  hades.md  process.md  time.md  visualisation.md
docs/examples/: battery-charging-station.md  hades-game.md  multi-agent-llm-storytelling.md  simple-simulation.md
docs/guides/: performance.md  visualisation.md
examples/: battery_charging_station.py  boids.py  multi_agent_llm_dialogues.py  readme_usage.py
examples/battery-charging-station/: index.html
examples/boids/: boids.py  boids_websockets_client.html
examples/multi-agent-llm-storytelling/: index.html
examples/multi_agent_llm_dialogues/: events.py  simulation.py
examples/multi_agent_llm_storytelling/: events.py  models.py  output.txt  processes.py  prompts.py  simulation.py  utilities.py
examples/simple-simulation/: index.html
guides/performance/: index.html
guides/visualisation/: index.html
hades/: __init__.py  hades.py  logging.py  process.py  visualisation.py
hades/core/: __init__.py  event.py  hades.py  process.py
hades/time/: __init__.py  day_steps.py  event.py  logging.py  process.py
hades/visualisation/: networkx.py  websockets.py
search/: search_index.json
tests/: test_concurrency.py  test_event.py  test_hades.py  test_hades_performance.py  test_logging.py  test_process.py
tests/examples/: test_battery_charging_station.py  test_readme_usage.py
tests/time/: __init__.py  test_day_steps.py  test_event.py  test_logging.py  test_process.py
tests/visualisation/: test_networkx.py  test_websockets.py
