[tool.poetry]
name = "hades"
version = "1.0.0"
description = "Hades Asynchronous Discrete-Event Simulation"
authors = ["Ki Insurance Team", "Reuben Thomas-Davis <Reuben.Thomas-Davis@ki-insurance.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    {include="hades"}
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
networkx = {version = "^3.1", optional = true}
networkx-stubs = {version = "^0.0.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
blacken-docs = "^1.13.0"
mypy = "^1.3.0"
import-linter = "^1.9.0"
coverage = "^7.2.6"
pytest-asyncio = "^0.21.0"

[tool.poetry.extras]
visualisation = ["networkx", "networkx-stubs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["hades"]

[tool.mypy]
files = ["hades/"]

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.importlinter]
root_package = "hades"

[[tool.importlinter.contracts]]
name = "hades.core may not import from hades.time"
type = "layers"
layers=["hades.time", "hades.core"]
